# ticTacToeBeginner

./: CMakeLists.txt  README.md  main  main.cpp  package-lock.json  server.cpp
.agent/workflows/: react-ui-implementation.md
.cache/clangd/index/: httplib.h.43669E0919F54C99.idx  httplib.h.B1F87605902DCBF5.idx  main.cpp.D92D77C475BD71C8.idx  main.cpp.F14FBA42BE521A8B.idx  server.cpp.A42A31C305BEA9CC.idx  server.cpp.F562DADD9AB620EA.idx
tic-tac-toe-ui/: package-lock.json  package.json
tic-tac-toe-ui/public/: index.html
tic-tac-toe-ui/src/: App.js  TicTacToe.css  TicTacToe.jsx  index.css
